# demo_package

./: README.md  pyproject.toml
src/demo_package_sebh/: __init__.py
