[project]
name = "demo_package_sebh"
version = "0.1.0"
description = "Minimal example package built with uv and hatchling."
readme = "README.md"
authors = [
    { name = "Seb Hilgers", email = "sebhi@mailbox.org" }
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

requires-python = ">=3.13"

[project.scripts]
demo-package = "demo_package_sebh:main"

[project.urls]
Homepage = "https://github.com/sebhilgers/demo_package"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_package_sebh"]
